fix missing margins in content

--- a/src/main/resources/scss/content/components/_client-content-overrides.scss
+++ b/src/main/resources/scss/content/components/_client-content-overrides.scss
@@ -1,4 +1,4 @@
-widget {
+nti-content, widget {
 	display: block;
 }
 
